--- a/PresentatioLayer/bin/PresentatioLayer.dll.config
+++ b/PresentatioLayer/bin/PresentatioLayer.dll.config
@@ -15,6 +15,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="conn" connectionString="Data Source=ANDRES;Initial Catalog=restaurant_management;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+		<add name="conn" connectionString="Data Source=DESKTOP-GS9T9FP\KERNEL;Initial Catalog=restaurant_management;Integrated Security=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
