--- a/BussinessLayer/BussinessLayer.csproj
+++ b/BussinessLayer/BussinessLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriasBussiness.cs" />
     <Compile Include="LoginBussiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
