--- a/BussinessLayer/BussinessLayer.csproj
+++ b/BussinessLayer/BussinessLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CategoriasBussiness.cs" />
     <Compile Include="LoginBussiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TablesBussiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
