--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CategoriasData.cs" />
     <Compile Include="LoginData.cs" />
+    <Compile Include="PersonalData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TablesData.cs" />
   </ItemGroup>
